# discogs-tracker

./: .gitignore  Cargo.toml  IMPLEMENTATION_COMPARISON.md  LICENSE  README.md  build.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/: README.md  cli.rs  cli.ts  config.rs  database.rs  discogs.rs  main.rs  types.rs
src/commands/: README.md  config.ts  demand.ts  history.ts  list.ts  migrate.ts  sync.ts  trends.ts  value.ts
src/db/: README.md  database.ts  migrations.ts
src/services/: README.md  discogs.ts
src/types/: README.md  index.ts
src/utils/: README.md  config.ts  formatter.ts  logger.ts  worker-pool.ts
src/workers/: README.md  price-fetcher.ts
tests/: setup.ts
tests/commands/: debug-flag.test.ts  format-filtering.test.ts  value.test.ts
tests/db/: database.test.ts  migrations.test.ts
tests/integration/: sync-workflow.test.ts
tests/services/: discogs.test.ts
tests/utils/: config.test.ts  formatter.test.ts  logger.test.ts  worker-pool.test.ts
