[package]
name = "discogs-tracker"
version = "1.0.0"
edition = "2021"
description = "CLI tool to track Discogs collection prices over time with multi-threaded sync and demand analysis"
license = "MIT"
authors = ["Discogs Tracker Contributors"]

[[bin]]
name = "discogs-tracker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
config = "0.13"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.0"
